bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "abi-downloader"
plugin = false
proc-macro = false
edition = "2021"
required-features = []

[package]
name = "abi-downloader"
edition = "2021"
version = "0.0.1"

[dependencies]
eyre = "0.6.12"
queued_rust = "0.7.4"
rand = "0.8.5"
rusty_ytdl = "0.7.2"
serde_json = "1.0.117"

[dependencies.essi-ffmpeg]
git = "https://github.com/MrAdhit/essi-ffmpeg"

[dependencies.salvo]
version = "0.68.1"
features = ["serve-static"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies.uuid]
version = "1.8.0"
features = ["serde", "fast-rng", "zerocopy", "v4"]
